ui: 글씨체 업데이트

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="login_nick_name">2~5 글자 닉네임을 입력해주세요.</string>
     <string name="login_nick_name_duplicate_check">중복확인</string>
     <string name="login_nick_name_btn">닉네임 입력완료</string>
-    <string name="login_greeting_message">축하해요\n%1$s님,\n바로 첫 목표를 시작해보세요!</string>
+    <string name="login_greeting_message">환영해요 %1$s님,\n이제 첫 목표를 시작해보세요!</string>
+
+    <string name="goal_available_members">무료 참여</string>
+    <string name="goal_open_soon">곧 다시 오픈해요</string>
+    <string name="goal_sold_out">품절</string>
 
 </resources>
