--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,19 @@
     <string name="goal_open_soon">곧 다시 오픈해요</string>
     <string name="goal_sold_out">품절</string>
 
+    <string name="my_goals_header_title">나의 목표</string>
+    <string name="my_goals_empty_message">현재 진행 중인 목표가 없습니다.\n참여할 목표를 보러 갈까요?</string>
+    <string name="my_goals_empty_button">보러가기</string>
+    <string name="my_goals_in_progress_button">진행하기</string>
+    <string name="my_goals_completed_restart_button">다시 시작하기</string>
+    <string name="my_goals_completed_detail_button">보러가기</string>
+
+    <string name="goal_detail_subject_title">목표 주제</string>
+    <string name="goal_detail_mentor_title">멘토명</string>
+    <string name="goal_detail_date_title">목표 기간</string>
+    <string name="goal_detail_description_title">목표 설명</string>
+    <string name="goal_detail_weekly_goals_title">주차별 목표</string>
+    <string name="goal_detail_milestone_title">중간 목표</string>
+    <string name="goal_detail_available_seats">무료참여 %d자리 남았어요</string>
+    <string name="goal_detail_start_button">목표 시작하기</string>
 </resources>
