--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="my_goals_completed_restart_button">다시 시작하기</string>
     <string name="my_goals_completed_detail_button">보러가기</string>
 
+    <string name="goal_detail_title">목표</string>
     <string name="goal_detail_subject_title">목표 주제</string>
     <string name="goal_detail_mentor_title">멘토명</string>
     <string name="goal_detail_date_title">목표 기간</string>
@@ -35,4 +36,13 @@
     <string name="goal_detail_milestone_title">중간 목표</string>
     <string name="goal_detail_available_seats">무료참여 %d자리 남았어요</string>
     <string name="goal_detail_start_button">목표 시작하기</string>
+
+    <string name="goal_detail_start_title">목표</string>
+    <string name="goal_detail_start_mentor_title">멘토</string>
+    <string name="goal_detail_start_price_title">가격</string>
+    <string name="goal_detail_start_warn_1">유의해주세요</string>
+    <string name="goal_detail_start_warn_2">무료 참여 횟수는 1회까지 가능해요</string>
+    <string name="goal_detail_unavailable">무료 참여 기회를 이미 사용했어요.\n곧 결제 기능이 추가될 예정이에요.</string>
+    <string name="goal_detail_complete">반가워요,\n함께 목표까지 완주해요!</string>
+    <string name="goal_detail_success_payment">결제 완료</string>
 </resources>
