--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="goal_detail_mentor_title">멘토명</string>
     <string name="goal_detail_date_title">목표 기간</string>
     <string name="goal_detail_description_title">목표 설명</string>
+    <string name="goal_detail_time">소요 시간</string>
     <string name="goal_detail_weekly_goals_title">주차별 목표</string>
     <string name="goal_detail_milestone_title">중간 목표</string>
     <string name="goal_detail_available_seats">무료참여 %d자리 남았어요</string>
@@ -51,4 +52,6 @@
 
     <string name="goal_more_detail_button">목표 상세보기</string>
     <string name="goal_progress_comment_title">멘토 코멘트</string>
+
+    <string name="my_page_title">마이페이지</string>
 </resources>
