ui: 코멘트 화면 말풍선 목록

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,6 @@
     <string name="goal_progress_comment_title">멘토 코멘트</string>
 
     <string name="my_page_title">마이페이지</string>
+
+    <string name="comments_detail_empty">오늘 해야 할 일을 진행하며 생긴\n 고민과 질문을 남기고 멘토 코멘트를 받아보세요:)</string>
 </resources>
